added gitignore file and updated readme file with session2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>GIT HIQ hiCollage- 2018</title>
 </head>
 <body>
-<h1>HiCollage GIT 2018</h1>
+<h1>HiCollage GIT 2018- try to see changes</h1>
 </body>
 </html>
