added one commit with changes on readme and added boxes in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GIT HIQ hiCollage- 2018</title>
+    <title>Production branch</title>
+    <link rel="stylesheet" href="stylesheet.css"/>
 </head>
 <body>
-<h1>HiCollage GIT 2018- try to see changes</h1>
+<h1>Box model</h1>
+<div class="box box-green">
+  1
+</div>
+<div class="box box-purple">
+  2
+</div>
 </body>
 </html>
