--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 <div class="box box-purple">
   2
 </div>
+<div class="box box-pink">
+  3
+</div>
+<div class="box box-yellow">
+  4
+</div>
 </body>
 </html>
