--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Box model</h1>
-<div class="box box-green">
+<div class="box box-purple">
   1
 </div>
 <div class="box box-yellow">
