--- a/index.html
+++ b/index.html
@@ -12,5 +12,14 @@
 <div class="box box-yellow">
   2
 </div>
+<div class="box box-pink">
+  3
+</div>
+<div class="box box-gray">
+  4
+</div>
+<div class="box box-dimgrey">
+  5
+</div>
 </body>
 </html>
