--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 </div>
 <div class="box box-dimgrey">
   4
- </div> 
+ </div>
 <div class="box box-pink">
   5
+</div>
+<div class="box">
+2
 </div>
 </body>
 </html>
